<resources>
    <string name="app_name">MovieX</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="now_showing">Now Showing</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="view_all">View All</string>
    <string name="explore">Explore</string>
    <string name="loading">Loading...</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="percentage_icon">Percentage Icon</string>
    <string name="percentage_template">%1$d%%</string>
    <string name="like_icon">Like Icon</string>
    <string name="movie_back_drop">movie back drop</string>
    <string name="synopsis">Synopsis</string>
    <string name="add_to_favorites">Add To Favorites</string>
    <string name="favorites">Favorites</string>
    <string name="recommended">Recommended</string>
    <string name="added_to_favorites">Added To Favorites</string>
    <string name="moviex_0_0_1">MovieX 0.0.1</string>
    <string name="keep_track_of_everything_you_watch">Keep track of everything you watch</string>
    <string name="about">About</string>
    <string name="you_have_no_favorites_yet">You have no favorites yet.</string>
    <string name="movie_details">Movie Details</string>
</resources>
