<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/bottomNavigation">

    <fragment
        android:id="@+id/navigation_details"
        android:name="com.orbilax.moviex.ui.details.DetailsFragment"
        android:label="@string/movie_details"
        tools:layout="@layout/fragment_details" >
        <argument
            android:name="movieId"
            app:argType="integer"
            android:defaultValue="-1"/>
    </fragment>

    <navigation
        android:id="@+id/bottomNavigation"
        app:startDestination="@id/navigation_home" >
        <fragment
            android:id="@+id/navigation_home"
            android:name="com.orbilax.moviex.ui.home.HomeFragment"
            android:label="@string/title_home"
            tools:layout="@layout/fragment_home" />
        <fragment
            android:id="@+id/navigation_about"
            android:name="com.orbilax.moviex.ui.about.AboutFragment"
            android:label="@string/title_notifications"
            tools:layout="@layout/fragment_notifications" />
        <fragment
            android:id="@+id/navigation_favorites"
            android:name="com.orbilax.moviex.ui.favorites.FavoriteFragment"
            android:label="@string/title_dashboard"
            tools:layout="@layout/fragment_favorites" />
        <action
            android:id="@+id/showMovieDetails"
            app:destination="@id/navigation_details" />
    </navigation>

</navigation>