<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/addToFavoriteBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.coordinatorlayout.widget.CoordinatorLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.appbar.AppBarLayout
                    android:id="@+id/appbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fitsSystemWindows="true"
                    android:theme="@style/ThemeOverlay.AppCompat.ActionBar">

                    <com.google.android.material.appbar.CollapsingToolbarLayout
                        android:id="@+id/collapsing_toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="270dp"
                        android:background="#FAFAFA"
                        android:fitsSystemWindows="true"
                        app:expandedTitleMarginStart="5dp"
                        app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

                        <xyz.sahildave.arclayout.ArcLayout
                            android:id="@+id/arcLayout"
                            android:layout_width="match_parent"
                            android:layout_height="250dp"
                            android:elevation="5dp"
                            android:fitsSystemWindows="true"
                            app:arc_cropCurve="cropConvex"
                            app:arc_height="48dp"
                            app:arc_position="bottom"
                            app:layout_collapseMode="parallax"
                            app:layout_collapseParallaxMultiplier="0.5">

                            <ImageView
                                android:id="@+id/movieBackDrop"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:contentDescription="@string/movie_back_drop"
                                android:fitsSystemWindows="true"
                                android:scaleType="centerCrop" />

                        </xyz.sahildave.arclayout.ArcLayout>

                    </com.google.android.material.appbar.CollapsingToolbarLayout>

                </com.google.android.material.appbar.AppBarLayout>

                <androidx.core.widget.NestedScrollView
                    android:id="@+id/scrollView2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scrollbars="none"
                    android:transitionName="bottom"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior"
                    app:layout_constraintBottom_toTopOf="@+id/addToFavoriteBtn">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <!--android:paddingBottom="100dp"android:paddingBottom="100dp"-->

                        <TextView
                            android:id="@+id/movieTitle"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="24dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginEnd="8dp"
                            android:textColor="@color/colorPrimary"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toStartOf="@+id/imageView2"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:text="Spider-Man Homecoming" />

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_marginEnd="8dp"
                            android:contentDescription="@string/like_icon"
                            app:layout_constraintBottom_toBottomOf="@+id/ratingPercentageTextView"
                            app:layout_constraintEnd_toStartOf="@+id/ratingPercentageTextView"
                            app:layout_constraintTop_toTopOf="@+id/ratingPercentageTextView"
                            app:srcCompat="@drawable/ic_heart" />

                        <TextView
                            android:id="@+id/ratingPercentageTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="24dp"
                            android:textColor="@color/colorPrimary"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="@+id/movieTitle"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/movieTitle"
                            app:layout_constraintVertical_bias="0.0"
                            tools:text="100%" />

                        <TextView
                            android:id="@+id/languageText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:textSize="16sp"
                            app:layout_constraintStart_toStartOf="@+id/genresDurationText"
                            app:layout_constraintTop_toBottomOf="@+id/genresDurationText"
                            tools:text="Language: En" />

                        <TextView
                            android:id="@+id/genresDurationText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:textSize="16sp"
                            app:layout_constraintStart_toStartOf="@+id/movieTitle"
                            app:layout_constraintTop_toBottomOf="@+id/movieTitle"
                            tools:text="Action, Adventure, Animation | 1hr 57 mins" />

                        <TextView
                            android:id="@+id/dimen2d"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:background="@drawable/gray_stroked_border"
                            android:paddingStart="15dp"
                            android:paddingTop="5dp"
                            android:paddingEnd="15dp"
                            android:paddingBottom="5dp"
                            android:text="2D"
                            app:layout_constraintStart_toStartOf="@+id/languageText"
                            app:layout_constraintTop_toBottomOf="@+id/languageText" />

                        <TextView
                            android:id="@+id/dimen3d"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:background="@drawable/gray_stroked_border"
                            android:paddingStart="15dp"
                            android:paddingTop="5dp"
                            android:paddingEnd="15dp"
                            android:paddingBottom="5dp"
                            android:text="3D"
                            app:layout_constraintBottom_toBottomOf="@+id/dimen2d"
                            app:layout_constraintStart_toEndOf="@+id/dimen2d"
                            app:layout_constraintTop_toTopOf="@+id/dimen2d" />

                        <TextView
                            android:id="@+id/dimen3d4dx"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:background="@drawable/gray_stroked_border"
                            android:paddingStart="15dp"
                            android:paddingTop="5dp"
                            android:paddingEnd="15dp"
                            android:paddingBottom="5dp"
                            android:text="3D 4DX"
                            app:layout_constraintBottom_toBottomOf="@+id/dimen3d"
                            app:layout_constraintStart_toEndOf="@+id/dimen3d"
                            app:layout_constraintTop_toTopOf="@+id/dimen3d" />

                        <TextView
                            android:id="@+id/dimenImax3d"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:background="@drawable/gray_stroked_border"
                            android:paddingStart="15dp"
                            android:paddingTop="5dp"
                            android:paddingEnd="15dp"
                            android:paddingBottom="5dp"
                            android:text="IMAX 3D"
                            app:layout_constraintBottom_toBottomOf="@+id/dimen3d4dx"
                            app:layout_constraintStart_toEndOf="@+id/dimen3d4dx"
                            app:layout_constraintTop_toTopOf="@+id/dimen3d4dx" />

                        <LinearLayout
                            android:id="@+id/linearLayout"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="32dp"
                            android:layout_marginEnd="1dp"
                            android:background="@color/colorGrayLight"
                            android:orientation="vertical"
                            android:padding="24dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/dimen2d">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/synopsis"
                                android:textAllCaps="true"
                                android:textColor="@color/colorPrimary"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/synopsisText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:textColor="@color/colorGrayDark"
                                android:textSize="18sp"
                                tools:text="After gaining superpowers from a spider bite, Miles Morales protects the city as Spider-Man. Soon, he meets alternate versions of himself and gets embroiled in an epic battle to save the multiverse." />
                        </LinearLayout>

                        <TextView
                            android:id="@+id/recommendedMovies"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/recommended"
                            android:textAllCaps="true"
                            android:textColor="@color/colorPrimary"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            app:layout_constraintStart_toStartOf="@+id/dimen2d"
                            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/recommendedMoviesRecyclerView"
                            android:layout_width="0dp"
                            android:layout_height="@dimen/titled_section_height_small"
                            android:layout_marginTop="8dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/recommendedMovies" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.core.widget.NestedScrollView>

            </androidx.coordinatorlayout.widget.CoordinatorLayout>

            <LinearLayout
                android:id="@+id/progressLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <ProgressBar
                    android:id="@+id/progressBar2"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </FrameLayout>

        <Button
            android:id="@+id/addToFavoriteBtn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/add_to_favorites"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>